# Angels-Mortals

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_pairings.cpp  main.cpp
include/anm/: participant_manager.h  server.h  telebot.h
python/: README.md  generateJson.py  main.py  randomiseTsv.py
src/: participant_manager.cpp  server.cpp  telebot.cpp
